--- a/src/WASM/wwwroot/index.html
+++ b/src/WASM/wwwroot/index.html
@@ -21,8 +21,9 @@
     <meta name="description" content="Name of your web site">
     <meta name="author" content="Marketify">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Arlo</title>
 	<link rel="icon" href="Arlo/img/logo/classic/light.png" type = "image/x-icon">
+    <title>Arlo</title>
+    <base href="/" />
 
     <!-- STYLES -->
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
