Working on contact section.

--- a/src/WASM/wwwroot/index.html
+++ b/src/WASM/wwwroot/index.html
@@ -32,6 +32,7 @@
     <!--MudBlazor-->
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
+    <!--Anchor Link-->
     <script>
         function BlazorScrollToId(id) {
             const element = document.getElementById(id);
