--- a/src/WASM/wwwroot/index.html
+++ b/src/WASM/wwwroot/index.html
@@ -17,9 +17,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
-    <!--Blazored Quill TextEditor-->
-    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+    <!--SyncfusionBlazor-->
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
+    <!--<script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>-->
 </head>
 
 <body>
@@ -35,11 +35,6 @@
 
     <!--MudBlazor-->
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-
-    <!--Blazored Quill TextEditor-->
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
-    <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
 
     <!--Anchor Link-->
     <script>
